fix test errors